# space-invaders

./: .gitignore  README.md  meson.build
src/: Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EventHandler.cpp  EventHandler.hpp  Logger.cpp  Logger.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Window.cpp  Window.hpp  main.cpp
